Limit to JavaScript

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,5 +3,5 @@
   description: Pluggable JavaScript linter
   entry: eslint
   language: conda
-  types: [text]
+  types: [text, javascript]
   args: ["--fix"]
