--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 - id: eslint-conda
   name: eslint-conda
-  description: Pluggable JavaScript linter
+  description: 'Pluggable JavaScript linter'
   entry: eslint
   language: conda
   types: [text, javascript]
-  args: ["--fix"]
+  args: [--fix]
